<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crpytography_text"
        android:textSize="40sp"
        android:layout_marginTop="100dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secure_your_message_text"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/encrypt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_text"
            android:background="#000"
            android:textColor="#fff"
            android:gravity="start|center"
            android:drawableEnd="@drawable/baseline_keyboard_double_arrow_right_24"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/decrypt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrypt_text"
            android:background="#000"
            android:textColor="#fff"
            android:gravity="start|center"
            android:drawableEnd="@drawable/baseline_keyboard_double_arrow_right_24"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>